[package]
name = "libconsensus-dag"
version = "0.0.1"
authors = ["Samuel Marks <@SamuelMarks>"]
edition = "2018"

[dependencies]
bincode = "1.0.1"
#crossbeam-channel = "0.3"
async-timer = "0.6.0"
jemallocator = "0.1"
log = "*"
os_pipe = "0.8.0"
serde = "=1.0.99"
serde_derive = "=1.0.99"
serde_json = "*"
sled = "*" 
to_vec = "*"
libconsensus = { git = "https://github.com/Fantom-foundation/libconsensus" }
libtransport = { git = "https://github.com/Fantom-foundation/libtransport" }
libtransport-tcp = { git = "https://github.com/Fantom-foundation/libtransport-tcp" }
libcommon-rs = { git = "https://github.com/Fantom-foundation/libcommon-rs" }
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
libhash-sha3 = { git = "https://github.com/Fantom-foundation/libhash-sha3" }
libsignature = { git = "https://github.com/Fantom-foundation/libsignature" }

